src/test/deca/context/invalid/resultats/test6_op_bool2-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test6_op_bool2.ass introuvable
